# AI-Robotic-Arm-Workshop

./: README.md  setup.sh
robotarm_bringup/: CMakeLists.txt  package.xml
robotarm_bringup/launch/: robotarm.launch.py
robotarm_description/: CMakeLists.txt  package.xml
robotarm_description/meshes/: base_link.STL  camera_link.STL  left_cutter_link.STL  left_gripper_link.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  right_cutter_link.STL  right_gripper_link.STL
robotarm_description/urdf/: final_arm.urdf  robotarm.urdf
robotarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotarm_moveit_config/config/: cocoabot.ros2_control.xacro  cocoabot.srdf  cocoabot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  robotarm.ros2_control.xacro  robotarm.srdf  robotarm.urdf.xacro  robotarm1.ros2_control.xacro  robotarm1.srdf  robotarm1.urdf.xacro  ros2_controllers.yaml
robotarm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robotarm_moveit_config1/: package.xml
robotarm_moveit_config1/config/: initial_positions.yaml  robotarm.urdf.xacro  ros2_controllers.yaml
robotarm_moveit_config1/launch/: demo.launch.py  spawn_controllers.launch.py
robotarm_path_planning/: CMakeLists.txt  package.xml
robotarm_path_planning/src/: path_planning.cpp  pose_path_planning.cpp
ros_robot_controller/: setup.py
(+1 files in other folders)
